# BoundingBoxes

./: .editorconfig  BoundingBoxes.cs  BoundingBoxes.csproj  BoundingBoxes.sln  BoundingBoxesConfig.cs  Parser.cs  manifest.json
Assets/: README.md
LevelDBMinimal/: ALL_BUILD.vcxproj  CMakeLists.txt  LevelDBMinimal.cs  LevelDBMinimal.vcxproj  LevelDbMinimal.sln  ZERO_CHECK.vcxproj
LevelDBMinimal/lib/cmake/leveldb/: leveldbTargets.cmake
LevelDBMinimal/src/: CMakeLists.txt  LevelDBMinimal.cpp  LevelDBMinimal.h
